--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-component",
+  "name": "magichub-components",
   "version": "0.0.1",
-  "description": "Stencil Component Starter",
+  "description": "WebComponents para la plataforma MagicHub",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
   "types": "dist/types/components.d.ts",
@@ -22,12 +22,12 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ionic-team/stencil-component-starter.git"
+    "url": "git+https://github.com/vrinox/MTGseekComp.git"
   },
   "author": "Ionic Team",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ionic-team/stencil"
+    "url": "https://github.com/vrinox/MTGseekComp"
   },
-  "homepage": "https://github.com/ionic-team/stencil"
+  "homepage": "https://github.com/vrinox/MTGseekComp"
 }
